# devcontainers-odoo

./: .gitignore  create_config.py  odools.toml  pyproject.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
oca/: repositories.txt
