[project]
name = "odoo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "inotify",
    "setuptools",
    "opencv-python",
    "pytesseract",
    "pdf2image",
    "aiohttp",
    "pycountry",
    "pandas",
    "gTTS",
    "schwifty",
    "xmlsig",
    "nox",
    "num2words",
    "ofxparse",
    "dbfread",
    "ebaysdk",
    "firebase_admin",
    "pyOpenSSL",
    "phonenumbers",
    "openupgradelib",
    "git-aggregator",
    "copier",
    "pre-commit",
    "debugpy",
    "pydevd-odoo",
    "pylint_odoo",
    "invoke",
    "ensurepath",
    "PyYAML",
    "ruff",
    "black",
    "types-invoke",
    "openpyxl-stubs",
    "click-odoo-contrib",
    "xmltodict",
    "suds",
]

[tool.setuptools.dynamic]
dependencies = {file = ["odoo/requirements.txt"]}